# knist

./: .editorconfig  .gitignore  README.md  build.gradle.kts  jitpack.yml  local.properties  settings.gradle.kts
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: build-cl-blast.yml  build-cpu-library.yml  build-gpu-library.yml  build-native-blas.yml  build-open-blas.yml  ktlint.yml  run-build.yml  run-mnist-model.yml  run-test.yml  run-tiny-stories-model.yml
buffer/: build.gradle.kts
buffer/base/: build.gradle.kts
buffer/cl/: build.gradle.kts
buffer/cl/cpp/: CMakeLists.txt  build.gradle.kts
buffer/cl/cpp/src/cl/: com_wsr_cl_JCLBlast.h
buffer/cpu/: build.gradle.kts
buffer/cpu/cpp/: CMakeLists.txt  build.gradle.kts
buffer/cpu/cpp/src/cpu/: collection_fun.cpp  collection_fun.h  com_wsr_cpu_JCollection.cpp  com_wsr_cpu_JMath.h  com_wsr_cpu_JOpenBLAS.cpp  com_wsr_cpu_JOpenBLAS.h  com_wsr_cpu_JOperation.cpp  com_wsr_cpu_JTranspose.cpp  com_wsr_cpu_JTranspose.h  mat_mul_fun.cpp  mat_mul_fun.h  math_fun.cpp  math_fun.h  operation_fun.cpp  operation_fun.h  transpose_fun.cpp  transpose_fun.h
buffer/cpu/cpp/src/cpu/jni/: com_wsr_cpu_JCollection.cpp  com_wsr_cpu_JCollection.h  com_wsr_cpu_JMatMul.cpp  com_wsr_cpu_JMatMul.h  com_wsr_cpu_JMath.cpp  com_wsr_cpu_JOpenBLAS.h  com_wsr_cpu_JOperation.cpp  com_wsr_cpu_JOperation.h  com_wsr_cpu_JTranspose.cpp
buffer/gpu/: build.gradle.kts
buffer/gpu/cpp/: CMakeLists.txt
buffer/gpu/cpp/src/gpu/: com_wsr_gpu_JCLBlast.cpp  com_wsr_gpu_JCLBlast.h
buffer/open/: build.gradle.kts
buffer/open/cpp/src/open/: com_wsr_open_JOpenBLAS.h
buffer/src/commonMain/kotlin/com/wsr/: BLAS.kt  Backend.kt
deprecated/functional/src/main/kotlin/common/: ModelUtils.kt
deprecated/functional/src/main/kotlin/layer/: Layer.kt  Node.kt
deprecated/optimize/src/main/kotlin/common/: FunctionUtils.kt  ModelUtils.kt
deprecated/optimize/src/main/kotlin/network/: DevNetwork.kt  Network.kt
deprecated/practical/: build.gradle.kts
deprecated/practical/src/commonMain/kotlin/com/wsr/: DomainException.kt  Network.kt
deprecated/tensor/src/main/kotlin/: Main.kt
gradle/: libs.versions.toml
io-type/: build.gradle.kts
io-type/batch/: build.gradle.kts
io-type/batch/src/commonMain/kotlin/com/wsr/: Batch.kt  ListExt.kt
io-type/blas/: build.gradle.kts
io-type/blas/base/: build.gradle.kts
io-type/blas/cl/: build.gradle.kts
io-type/blas/cl/cpp/: CMakeLists.txt
io-type/blas/cl/cpp/src/cl/: com_wsr_cl_JCLBLast.cpp  com_wsr_cl_JCLBLast.h  com_wsr_cl_JCLBlast.cpp  com_wsr_cl_JCLBlast.h
io-type/blas/cl/cpp/src/open/: com_wsr_cl_JCLBLast.h  com_wsr_open_JOpenBLAS.h
io-type/blas/cpp/: CMakeLists.txt  build.gradle.kts  build.gradle.kts.cmake-backup
io-type/blas/cpp/src/main/: com_wsr_JBLAS.cpp  com_wsr_JBLAS.h  com_wsr_JOpenBLAS.cpp  com_wsr_JOpenBLAS.h
io-type/blas/open/: build.gradle.kts
io-type/blas/open/cpp/: CMakeLists.txt  build.gradle.kts
io-type/blas/open/cpp/src/open/: com_wsr_JOpenBLAS.cpp  com_wsr_open_JOpenBLAS.cpp
io-type/blas/src/commonMain/kotlin/com/wsr/: BLAS.kt  DataBuffer.kt  IBLAS.kt
io-type/blas/src/commonTest/kotlin/com/wsr/: DDotTest.kt  DGemmTest.kt  DGemvTest.kt  SDotTest.kt  SGemmTest.kt  SGemvTest.kt
io-type/blas/src/jvmMain/java/com/wsr/: JBLAS.java  JOpenBLAS.java
io-type/blas/src/jvmMain/kotlin/com/wsr/: BLAS.kt  Loader.kt  LoaderExt.kt  OpenBLAS.kt
io-type/blas/src/jvmMain/resources/: libJBLAS.dylib  libJOpenBLAS.dylib
io-type/core/: build.gradle.kts
io-type/core/src/commonMain/kotlin/com/wsr/: IOType.kt
io-type/core/src/commonTest/kotlin/com/wsr/: D1Test.kt  D2Test.kt  D3Test.kt  D4Test.kt
io-type/src/commonMain/kotlin/com/wsr/: IOType.kt
io-type/src/commonMain/kotlin/com/wsr/batch/: Batch.kt  ListExt.kt
io-type/src/commonMain/kotlin/com/wsr/core/: IOType.kt
io-type/src/commonMain/kotlin/com/wsr/d1/: OperatorExt.kt
io-type/src/commonMain/kotlin/com/wsr/d2/: D2Ext.kt
io-type/src/commonTest/kotlin/com/wsr/: D1Test.kt  D2Test.kt  D3Test.kt  D4Test.kt
io-type/src/commonTest/kotlin/com/wsr/collection/: MinExtTest.kt
io-type/src/commonTest/kotlin/com/wsr/operation/: DivExtTest.kt
io-type/src/commonTest/kotlin/com/wsr/reshape/: D3ExtTest.kt
io-type/src/jvmMain/kotlin/com/wsr/d1/: OperatorExt.kt
lib/: build.gradle.kts
lib/src/commonMain/kotlin/com/wsr/: CollectionExt.kt  Layer.kt  Network.kt  NetworkBuilder.kt  NetworkSerializer.kt  RandomExt.kt  Serializer.kt
lib/src/commonMain/kotlin/com/wsr/common/: CollectionExt.kt  IOType.kt  ListExt.kt
lib/src/commonMain/kotlin/com/wsr/converter/: Converter.kt  InputConverter.kt
lib/src/commonMain/kotlin/com/wsr/initializer/: Fixed.kt  He.kt  Random.kt  WeightInitializer.kt  Xavier.kt
lib/src/commonMain/kotlin/com/wsr/layer/: Context.kt  Layer.kt
lib/src/commonMain/kotlin/com/wsr/layers/: Layer.kt  Process.kt
lib/src/commonMain/kotlin/com/wsr/optimizer/: Optimizer.kt  Scheduler.kt
lib/src/commonMain/kotlin/com/wsr/output/: Output.kt  SigmoidWithLoss.kt  SoftmaxWithLoss.kt
lib/src/main/kotlin/common/: DoubleArrayExt.kt
lib/src/main/kotlin/common/iotype/: IOTypeExt.kt
lib2/: build.gradle.kts
lib2/src/commonMain/kotlin/com/wsr/: Affine1d.kt  Bias1d.kt  Layer.kt  Network.kt  Relu1d.kt  Sigmoid1d.kt  Softmax1d.kt
network/: build.gradle.kts
network/src/commonMain/kotlin/com/wsr/: Network.kt  NetworkBuilder.kt  NetworkSerializer.kt
practical/: build.gradle.kts
sample/: build.gradle.kts
sample/src/main/kotlin/: ListExt.kt  Main.kt
sample/src/main/kotlin/dataset/iris/: IrisDataset.kt  IrisModelUtils.kt  IrisUtils.kt
sample/src/main/kotlin/dataset/mnist/: MnistConverter.kt  MnistDataset.kt  MnistModelUtils.kt  MnistUtils.kt
sample/src/main/kotlin/dataset/signal/: SignalDataset.kt  SignalModelUtils.kt
sample/src/main/kotlin/dataset/storeis/: TinyStoriesUtils.kt  TokenizeExt.kt
sample/src/main/kotlin/dataset/wine/: WineDataset.kt  WineModelUtils.kt
sample/src/test/kotlin/mnist/: Converter.kt  MnistDataset.kt  MnistTest.kt
sample/src/test/kotlin/stories/: TinyStoriesTest.kt
(+1017 files in other folders)
